--- a/README
+++ b/README
@@ -4,7 +4,7 @@ written in go.
 == Code example ==
 
 See src/openid_example for a simple webserver using the openID
-implementation. Also, read the comment about the NonceStore towards
+implementation with FAS as service provider. Also, read the comment about the NonceStore towards
 the top of that file.
 
 == License ==
@@ -12,7 +12,3 @@ the top of that file.
 Distributed under the Apache v2.0 license:
 http://www.apache.org/licenses/LICENSE-2.0.html
 
-== Related projects ==
-
-Here is another open-id consumer library in go:
-https://github.com/fduraffourg/go-openid
